--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "http://localhost/ivoa.new"
+baseURL = "https://webtest.ivoa.info"
 languageCode = "en-us"
 title = "International Virtual Observatory Alliance"
 author = "IVOA.net"
