Ignore hugo-related files

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ hugo_stats.json
 
 # tmp hugo file
 .hugo_build.lock
+
+# ignore hugo in case you have installed it in the project directory
+hugo
+hugo*.tar.gz
