--- a/.github/workflows/build_and_deploy.yaml
+++ b/.github/workflows/build_and_deploy.yaml
@@ -34,5 +34,6 @@ jobs:
           username: webstage
           server: web.ivoa.net
           dry-run: ${{ env.DRY_RUN }}
+          key: ${{ secrets.STAGE_ID }}
           uploads: |
             ./public/ => ./ivoa-web-stage/
