Rename 'build' jobs to 'deploy'

--- a/.github/workflows/deploy_version.yaml
+++ b/.github/workflows/deploy_version.yaml
@@ -7,7 +7,7 @@ env:
   HUGO_VERSION: 0.123.4
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
