--- a/.github/workflows/deploy_main.yaml
+++ b/.github/workflows/deploy_main.yaml
@@ -6,9 +6,6 @@ on:
     branches:
       - main
 
-env:
-  HUGO_VERSION: 0.123.4
-
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -16,13 +13,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Download hugo
-        run: |
-          wget https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_${HUGO_VERSION}_Linux-64bit.tar.gz
-          tar -zxvf hugo_${HUGO_VERSION}_Linux-64bit.tar.gz hugo
+      - name: Setup Hugo
+        uses: ./.github/actions/setup-hugo
 
       - name: Build the website
-        run: ./hugo
+        run: ~/hugo
 
       - name: Deploy the website
         uses: Dylan700/sftp-upload-action@latest
