Add a Makefile to install Hugo and start preview
Fixes #14

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,10 @@ hugo_stats.json
 
 # tmp hugo file
 .hugo_build.lock
+/preview/
 
 # ignore hugo in case you have installed it in the project directory
 /hugo
 /hugo*.tar.gz
+/hugo-bin/
+/hugo-bin_old/
