Update sftp config

--- a/.github/workflows/deploy_main.yaml
+++ b/.github/workflows/deploy_main.yaml
@@ -24,6 +24,7 @@ jobs:
         with:
           username: webstage
           server: web.ivoa.net
+          port: ${{ secrets.SFTP_PORT }}
           key: ${{ secrets.STAGE_ID }}
           uploads: |
             ./public/ => ./ivoa-web-stage/
