--- a/.github/actions/setup-pagefind/action.yaml
+++ b/.github/actions/setup-pagefind/action.yaml
@@ -15,5 +15,5 @@ runs:
         key: ${{ runner.os }}-pagefind-${{ inputs.pagefind_version }}
     - name: Download and extract PageFind
       run: |
-        make ./.v${{ inputs.pagefind_version }}
+        make ./pagefind-bin/.v${{ inputs.pagefind_version }}
       shell: bash
