--- a/.github/actions/setup-hugo/action.yaml
+++ b/.github/actions/setup-hugo/action.yaml
@@ -11,13 +11,9 @@ runs:
     - name: Cache Hugo
       uses: actions/cache@v3
       with:
-        path: ~/hugo
+        path: ./hugo-bin
         key: ${{ runner.os }}-hugo-${{ inputs.hugo_version }}
     - name: Download and extract Hugo
       run: |
-        if [ ! -f ~/hugo ]; then
-          wget https://github.com/gohugoio/hugo/releases/download/v${{ inputs.hugo_version }}/hugo_${{ inputs.hugo_version }}_Linux-64bit.tar.gz
-          tar -zxvf hugo_${{ inputs.hugo_version }}_Linux-64bit.tar.gz
-          mv hugo ~/hugo
-        fi
+        make ./hugo-bin/.v${{ inputs.hugo_version }}
       shell: bash
