--- a/.github/workflows/deploy_version.yaml
+++ b/.github/workflows/deploy_version.yaml
@@ -26,6 +26,16 @@ jobs:
         shell: bash
         run: echo "BRANCH_NAME=${{ env.BRANCH_NAME }}"
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+
+      - name: Install dependencies
+        run: |
+          npm install
+          npm install -D postcss postcss-cli autoprefixer tailwindcss
+
       - name: Setup Hugo
         uses: ./.github/actions/setup-hugo
 
