--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://webtest.ivoa.info"
+baseURL = "{{ getenv `BASEURL` }}"
 languageCode = "en-us"
 title = "International Virtual Observatory Alliance"
 author = "IVOA.net"
