iss101 Updated Makefile

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "{{ getenv `BASEURL` }}"
+baseURL = ""
 languageCode = "en-us"
 title = "International Virtual Observatory Alliance"
 author = "IVOA.net"
