--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.16"
+  },
+  "dependencies": {
+    "@tailwindcss/typography": "^0.5.16"
   }
 }
